--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "David",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^2.3.0"
+    "chalk": "^2.3.0",
+    "restify": "^6.3.4"
   }
 }
